--- a/app/templates/get_file.html
+++ b/app/templates/get_file.html
@@ -1,11 +1,3 @@
-<!-- here article is in format:
-article.id - [0]
-article.author_name - [1]
-article.article_name - [2]
-article.date - [3]
-article.status - [4]
--->
-
 {% extends "base.html" %}
 {% block content %}
 <script>
@@ -24,6 +16,7 @@ article.status - [4]
     <div class="article-read">
       <p><img src="/static/filestorage/{{article[5]}}" alt="{{article[5]}}" width="99%"></p> 
     </div>
+    {% if article[4] == 2%}
     <div class="comments">
       <div class="user">
         <div id="user_comments"></div>
@@ -32,12 +25,14 @@ article.status - [4]
       </div>
       {% if current_user.is_authenticated %}
       <div class="admin">
+      <h4>Комментарий Администратора</h4>
         <div id="admin_comments"></div>
 	        <div id="admin_next_button" name="next_button"><p onclick="get_comment('{{article.id}}',3, 'admin')">Далее>></p></div>
 	        <div id="admin_previous_button" name="previous_button"><p onclick="get_comment('{{article.id}}',-3, 'admin')"><<Назад</p></div>
-     </div> 
+        </div> 
       {% endif %}
-    </div>
+      </div>
+    <div>
     <div class="additional_img">
       <img src="/static/images/pen_and_ink.jpg" width="400px" height="300px" alt="pen_and_ink">
     </div>
@@ -49,6 +44,7 @@ article.status - [4]
           <input type="hidden" name="art_id" value="{{article[0]}}">
         <p>Оцените статью по 10-бальной шкале:</p>
           <input type="button" value="0" name="counter" id="counter" onclick="counterr(this.id)">
+          <input type="button" class="btn red" onclick="send_comment(this.form, 'admin')" value="Отправить">
         {% else %}
         <p>Ваше Имя</p>
           <input name="name" type="text">
@@ -57,12 +53,20 @@ article.status - [4]
         <p>Комментарий:</p>
           <textarea cols="10" rows="10" name="comment"></textarea>
           <input type="hidden" name="art_id" value="{{article.id}}">
+          <input type="button" class="btn red" onclick="send_comment(this.form,'user')" value="Отправить">
       {% endif %}
-          <input type="button" class="btn red" onclick="sendPost(this.form)" value="Отправить">
       </form>
-        <div id="result"></div>
+        <div id="result" class="flash-messages"></div>
     </div>
+    </div>
+    {% else %}
+    <div class="design">
+    <h4>Статус статьи уже определен</h4>
+    </div>
+    {% endif %}
 </div>
     <script>get_comment('{{article.id}}',0, 'user')</script>
-        <script>get_comment('{{article.id}}',0, 'admin')</script>
+      {% if current_user.is_authenticated %}
+          <script>get_comment('{{article.id}}',0, 'admin')</script>
+      {% endif %}
 {% endblock %}
