--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,72 +4,72 @@
   <div class="main">
       <div id="slideshow">
             <ul>
-              <li class="image"><img src="/static/images/1.jpg" alt=""></li>
-              <li class="image"><img src="/static/images/2.jpg" alt=""></li>
-              <li class="image"><img src="/static/images/3.jpg" alt=""></li>
-              <li class="image"><img src="/static/images/4.jpg" alt=""></li>
+              <li class="image"><img src="/static/images/alphabet.jpg" alt=""></li>
+              <!--li class="image"><img src="/static/images/drive-Gagarin.jpg" alt=""></li> -->
+              <li class="image"><img src="/static/images/gagarin_on_street.jpg" alt=""></li>
+              <li class="image"><img src="/static/images/russian_flag.jpg" alt=""></li>
             </ul>
 -        <span class="arrow previous"></span>
         <span class="arrow next"></span>
     </div>
    <div class="main-description">
      <h2>Культурный город - </h2>
-     <h4>&emsp; - город, который делают люди</h4>
-     <p>Напишите свою стать, отправьте ее в "Культурный город" и ее прочитает Санкт-Петербург</p>
+     <h4>&emsp;- город, который делают люди</h4>
+     <p>Напишите свою статью, отправьте ее в "Культурный город" и ее прочитает Санкт-Петербург</p>
      <a href="create.html" class="btn red">Написать</a>
      <p class="sidetext">Ознакомится с правилами написания статей можно в разделе <span>"Написать"</span></p>
    </div>
   </div>
   <div class="tagline">
     <h1>Давайте делать город лучше</h1>
-    <p>Напишите интересную статью для ваших сограждан</p>
-    <p>Сограждане напишут интересную статью для Вас</p>
-    <p>И мы разместим статью у наших рекламных партнеров</p>
+    <h3>Напишите интересную статью для ваших сограждан</h3>
+    <h3>Мы проверим статью на содержание и орфографию</h3>
+    <h3>И разместим у наших рекламных партнеров</h3>
   </div>
     <div class="block">
       <div class="feature">
         <img src="/static/images/write.svg" alt="write"></img>
-        <h3>Написать статью</h3>
+        <h3><a href="create.html">Написать статью</a></h3>
         <p>Напишите статью, отправьте ее в "Культурный город" и ее увидит Санкт-Петербург</p>
       </div>
       <div class="feature">
         <img src="/static/images/about.svg" alt="about"></img>
-        <h3>О проекте</h3>
-        <p>Как функционирует проект, основые его состоявляющей деятельности</p>
+        <h3><a href="about.html">О проекте</a></h3>
+        <p>Как функционирует проект, основы его состоявляющей деятельности</p>
       </div>
       <div class="feature">
         <img src="/static/images/read.svg" alt="read"></img>
-        <h3>Читать</h3>
+        <h3><a href="read.html">Читать</a></h3>
         <p>Прочитайте статьи, которые написали соотечественники. Это интересно</p>
       </div>
       <div class="feature">
         <img src="/static/images/contact.svg" alt="contacts"></img>
-        <h3>Наши контакты</h3>
+        <h3><a href="contacts.html">Наши контакты</a></h3>
         <p>У вас есть вопросы? <br>Пишите нам и мы с радостью Вам ответим</p>
       </div>
     </div>
   <div class="general-graphic-block">
     <h1>Наши партнеры</h1>
       <div class="graphic-block">
-        <img src="/static/images/ghost_hunter.jpg" width="100" height="100" alt=""></img>
+        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
       </div>
   
       <div class="graphic-block">
-        <img src="/static/images/mortal-kombat.png" width="100" height="100" alt=""></img>
+        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
       </div>
   
       <div class="graphic-block">
-        <img src="/static/images/south_park.png" width="100" height="100" alt=""></img>
+        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
       </div>
   
       <div class="graphic-block">
-        <img src="/static/images/google.jpg" width="100" height="100" alt=""></img>
+        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
       </div>
       <div class="graphic-block">
-        <img src="/static/images/NASA_logo.svg.png" width="100" height="100" alt=""></img>
+        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
       </div>
       <div class="graphic-block">
-        <img src="/static/images/playboy-symbol.jpg" width="100" height="100" alt=""></img>
+        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
       </div>
   </div>
 
