--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,54 +2,54 @@
 
 {% block content %}
 <div class="about">
-  <div class="text">
-    <h1>Проект "Культурный город" - </h1>
-    <p style="font-family:Panton-Italic;">&emsp;Проект, нацеленный на улучшение культурного уровня жизни людей, улучшения их культурного окружения.</p>
-    <p>В окружающем пространстве "рекламного содержимого" "Культурный город" намерен разбавить этот контент интересной,</p>
-    <p>полезной информацией, которой горожане смогут делиться друг с другом </p>
+  <div class="about-text">
+    <h2>Проект "Культурный город" - <span>Проект, направленный на улучшение культурного уровня жизни, культурного окружения</span></h2>
+    <h2><span>Достигаться это будет путем размещения познавательных статей, написанных гражданами, на свободных рекламных стендах города</span></h2>
   </div>
   
    <div class="general-graphic-block">
     <h1>Как работает проект</h1>
       <div class="graphic-block">
-        <img src="/static/images/lamp.svg" width="100" height="100" alt=""></img>
+        <div class="lamp"></div>
         <h3>Придумай интересную статью</h3>
       </div>
 
       <div class="graphic-block">
-        <div class="make"><img src="/static/images/cogweel.svg" width="100" height="100" alt=""></img></div>
+        <div class="cogweel"><img src="/static/images/cogweel.svg" width="100" height="100" alt=""></img></div>
         <h3>Сделай интересный дизайн<h3>
       </div>
 
       <div class="graphic-block">
-        <img src="/static/images/letter.svg" width="100" height="100" alt=""></img>
-        <h3>Отправь ее в <br>"Культурный город"<h3>
+        <div class="letter"></div>
+        <h3>Отправь результат в <br>"Культурный город"<h3>
       </div>
 
       <div class="graphic-block">
-        <img src="/static/images/check_mark.svg" width="100" height="100" alt=""></img>
-        <h3>Мы проверим ее на орфографию<h3>
+        <div class="check"></div>
+        <h3>Мы проверим статью на содержание<h3>
       </div>
 
       <div class="additional-block">
-        <img src="/static/images/posted.png" width="100" height="100" alt=""></img>
+        <div class="bilbord"></div>
         <h3>И разместим у наших рекламных партнеров</h3>
       </div>
+      <hr>
   </div>
  
   <div class="service">
-  <h2>Идейность проект</h2>
+  <h2>Философия проекта</h2>
     <ul>
-        <li>"Культурный город" разбавляет окружающий рекламный контент,но не предоставляет его</li>
-        <li>"Культурный город" делают люди</li>
-        <li>"Культурный город" за развитие</li>
-        <li>"Культурный город" объединяет людей</li>
-        <li>"Культурный город" - Культурный город</li>
-        <li>"Культурный город" одобрен Минздравом РФ</li>
-        <li>"Культурный город" за понимание</li>
-        <li>"Культурный город" краучего вообще Ара слушай</li>
+        <li><span>"Культурный город"</span> делают люди</li>
+        <li><span>"Культурный город"</span> за развитие</li>
+        <li><span>"Культурный город"</span> объединяет людей</li>
+        <li><span>"Культурный город"</span> - Культурный город</li>
+        <li><span>"Культурный город"</span> демократичен</li>
+        <li><span>"Культурный город"</span> многогранен</li>
+        <li><span>"Культурный город"</span> на острие прогресса</li>
+        <li><span>"Культурный город"</span> практичен</li>
+        <li><span>"Культурный город"</span> открыт новому опыту</li>
+        <br>
     </ul>
   </div>
 </div>
-
 {% endblock %}
