--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
+<style>
+    .error {
+        margin:auto;
+        text-align:center;
+    }
+    .error h2 {
+        font-size:30px;
+    }
+    .error p {
+        text-transform:uppercase;
+    }
+</style>
 
-<p>{{error}}</p>
+<div class="error">
+<p>this page is in design</p>
+<h2>{{error}}</h2>
 
 {% endblock %}
