--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,23 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-        <div id="user_comment">
-        </div>
-            <p onclick="get_comment()">Далее</p>
+<h3>Форма поиска</h3>
+          <div class="radioButtons">
+            <div class="radioButton"><label for="0">0</label><input type="radio" name="articleRating" value="0" checked/></div>
+            <div class="radioButton"><label for="1">1</label><input type="radio" name="articleRating" value="1"/></div>
+            <div class="radioButton"><label for="2">2</label><input type="radio" name="articleRating" value="2"/></div>
+            <div class="radioButton"><label for="3">3</label><input type="radio" name="articleRating" value="3"/></div>
+            <div class="radioButton"><label for="4">4</label><input type="radio" name="articleRating" value="4"/></div>
+            <div class="radioButton"><label for="5">5</label><input type="radio" name="articleRating" value="5"/></div>
+            <div class="radioButton"><label for="6">6</label><input type="radio" name="articleRating" value="6"/></div>
+            <div class="radioButton"><label for="7">7</label><input type="radio" name="articleRating" value="7"/></div>
+            <div class="radioButton"><label for="8">8</label><input type="radio" name="articleRating" value="8"/></div>
+            <div class="radioButton"><label for="9">9</label><input type="radio" name="articleRating" value="9"/></div>
+            <div class="radioButton"><label for="10">10</label><input type="radio" name="articleRating" value="10"/></div>
+          </div>
 
-<script>
-    var data = {{ comment|safe }};
-    var mydiv = document.getElementById('user_comment');
-    for (var i = 0; i <=3; i++){
-        var div = document.createElement('div');
-        div.innerHTML = "<p><span class='comment_fieldi'>Имя пользователя</span> - " + data[i][0] + "</p>" +
-        "<p><span class='comment_fieldi'>Комментарий</span> - " + data[i][1] + "</p>"+
-        "<p><span class='comment_fieldi'>Дата</span> - " + data[i][2] + "</p>" + "<br>";
-        mydiv.appendChild(div);
-        }
-</script>
-
-<script>
-$('.comment').html("{{comment}}");
-
-</script>
 {% endblock %}
