add icons, correct handshake icon in index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,25 +51,25 @@
   <div class="general-graphic-block">
     <h1>Наши партнеры</h1>
       <div class="graphic-block">
-        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
+        <img src="/static/images/handshake_icon.png" width="100" height="100" alt=""></img>
       </div>
   
       <div class="graphic-block">
-        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
+        <img src="/static/images/handshake_icon.png" width="100" height="100" alt=""></img>
       </div>
   
       <div class="graphic-block">
-        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
+        <img src="/static/images/handshake_icon.png" width="100" height="100" alt=""></img>
       </div>
   
       <div class="graphic-block">
-        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
+        <img src="/static/images/handshake_icon.png" width="100" height="100" alt=""></img>
       </div>
       <div class="graphic-block">
-        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
+        <img src="/static/images/handshake_icon.png" width="100" height="100" alt=""></img>
       </div>
       <div class="graphic-block">
-        <img src="/static/images/partners.png" width="100" height="100" alt=""></img>
+        <img src="/static/images/handshake_icon.png" width="100" height="100" alt=""></img>
       </div>
   </div>
 
