--- a/app/static/css/forms.css
+++ b/app/static/css/forms.css
@@ -1,66 +1,54 @@
+input {
+    font-size: 12px;
+    background: #fff;
+    font-family:'Panton-Regular';
+    padding: 10px;
+    border: 1px solid #ebeae5;
+}
+
+textarea {
+    font-size: 12px;
+    background: #fff;
+    font-family:'Panton-Regular';
+    /*padding: 10px 10px 10px 10px; */
+    padding: 10px;
+    border: 1px solid #ebeae5;
+}
 .form {
     width: 350px;
     float:right;
     margin-right:50px;
     margin-top:20px;
 }
-
 .form h2 {
     margin-bottom:10px;
 }
 .form p{
     display:block;
 }
-
-.form input {
-    float:right;
-    clear:both;
-}
-
-.form form input[type=text] {
-    font-size: 12px;
-    background: #fff;
-    font-family:'Panton-Regular';
-    /*padding: 10px 10px 10px 10px; */
-    padding: 10px;
-    width: 330px; /*is it wrong way? yes it is!!! */
-    border: 1px solid #ebeae5;
-    margin-left: 0px;
-    float:left;
-    margin-bottom:10px;
-}
-
-.form form input[type=password] {
-    font-size: 12px;
-    background: #fff;
-    font-family:'Panton-Regular';
-    /*padding: 10px 10px 10px 10px; */
-    padding: 10px;
-    width: 330px; /*is it wrong way? yes it is!!! */
-    border: 1px solid #ebeae5;
-    margin-left: 0px;
-    float:left;
-    margin-bottom:10px;
-}
-
-
-.form textarea {
-    font-size: 12px;
-    background: #fff;
-    font-family:'Panton-Regular';
-    /*padding: 10px 10px 10px 10px; */
-    padding: 10px;
-    width: 330px; /*is it wrong way? yes it is!!! */
-    border: 1px solid #ebeae5;
-    margin-left: 0px;
-    float:left;
-    margin-bottom:10px;
-}
-    
-/*is it wrong way??? */
 .form label {
     float:right;
     margin-bottom:20px;
+}
+.form h3 {
+    clear:both;
+    line-height:30px;
+    margin-bottom:20px;
+}
+.form input[type=button], input[type=submit] {
+    clear:both;
+    float:right;
+}
+
+.form input[type=text]{
+    width:330px;
+    float:left;
+    margin-bottom:10px;
+}
+.form textarea {
+    width:330px;
+    float:left;
+    margin-bottom:10px;
 }
 
 #find.form form input {
@@ -92,10 +80,6 @@ textarea {
     background:url(images/textarea-bg.jpg) right no-repeat #efefef;
 } */
 
-
-
-
-
 .field {
     clear:both;
     text-align:right;
@@ -105,3 +89,65 @@ textarea {
 .field label {
     clear:both;
 }
+
+
+.radioButton {
+    display:inline-block;
+    text-align:center;
+    margin:5px;
+}
+
+.radioButton label {
+    display:block;
+    margin:0px;
+    margin-right:2px;
+    margin-bottom:5px;
+    
+}
+.radioButtons input {
+    margin:0;
+    clear:both;
+    display:block;
+}
+
+.contact-form {
+    width:65%;
+    display:inline-block;
+    margin:20px;
+}
+.contact-form p {
+    margin-bottom:10px;
+    line-height:25px;
+    font-size:16px;
+}
+.contact-form form input[type=submit] {
+    margin-right:7px;
+    margin-top:20px;
+    margin-bottom:0px;
+}
+.contact-form h3 {
+    padding:0px;
+    margin:0px;
+    color: #204a65;
+    font-family:"Panton-Italic";
+}
+.form-field:first-child {
+    margin-right:50px;
+}
+.form-field {
+    display:inline-block;
+    width:46.2%;
+}
+.form-field input {
+    width:100%;
+    background-color:#e1e1db;
+}
+.comment {
+    margin-top:20px;
+    word-break:break-all;
+}
+.comment textarea {
+    width:95%;
+    background-color:#e1e1db;
+}
+
