--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -128,10 +128,6 @@ p {
 
 
 
-
-
-
-
 /*==========top(above logo)==========*/
 .top {
     background: #B92800;
@@ -142,10 +138,10 @@ p {
     color: white;
     float: left;
     padding: 10px;
-    font-family: 'Panton-Italic';
     font-size: 14px;
     letter-spacing: 1px;
     float:left;
+    font-style:italic;
 }
 
 .top p {
@@ -219,7 +215,6 @@ p {
     width: 100%;
     background:#ffffff;
 }
-
 /*==========end block==========*/
 
 
@@ -232,6 +227,50 @@ p {
     overflow:hidden;
 }
 
+.main-description {
+    background: #333 url('/static/images/bg4.png') repeat;
+    color: #FFFFFF;
+    float:right;
+    height: 280px;
+    padding-right:10px;
+    padding-left:10px;
+    position:absolute; /*fuck how does it works?*/
+    right:0;
+    width: 342px;
+}
+
+.main-description h2 {
+    color: #fff;
+    margin-left:15px;
+    margin-top:5px;
+}
+
+.main-description h4 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: #fcc000; /*35acc8;*/
+}
+
+.main-description p {
+    margin-left:15px;
+    line-height: 24px;
+    font-size: 15px;
+}
+.main-description p.sidetext{
+    font-size: 11px;
+    line-height: 16px;
+}
+
+.main-description p.sidetext span{
+    color: #fcc000;
+}
+
+.main-description .btn {
+    margin-left: 110px;
+}
+
+
+/*=============end main===========*/
 
 /*-----------slideshow-slider-----------*/
 
@@ -281,53 +320,6 @@ p {
 /*--------end-slideshow----------*/
 
 
-
-
-.main-description {
-    background: #333 url('/static/images/bg4.png') repeat;/*how does flask work with url?*/
-    color: #FFFFFF;
-    float:right;
-    height: 280px;
-    padding-right:10px;
-    padding-left:10px;
-    position:absolute; /*fuck how does it works?*/
-    right:0;
-    width: 342px;
-}
-
-.main-description h2 {
-    color: #fff;
-    margin-left:15px;
-    margin-top:5px;
-}
-
-.main-description h4 {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    color: #fcc000; /*35acc8;*/
-}
-
-.main-description p {
-    margin-left:15px;
-    line-height: 24px;
-    font-size: 15px;
-}
-.main-description p.sidetext{
-    font-size: 11px;
-    line-height: 16px;
-}
-
-.main-description p.sidetext span{
-    color: #fcc000;
-}
-
-.main-description .btn {
-    margin-left: 150px;
-}
-
-
-/*=============end main-description===========*/
-
 /*============taglain==================*/
 .tagline {
     background: none repeat scroll 0 0 #ffffff;
@@ -338,13 +330,11 @@ p {
 .tagline h1 {
     text-transform: uppercase;
 }
-.tagline p {
-    line-height: 20px;
-    margin:10px
+.tagline h3 {
+    line-height: 40px;
 
 }
 /*=============end tagline=============*/
-
 
 /*=========features==============*/
 .feature {
@@ -373,8 +363,13 @@ p {
     height: 50px;
     color: #666666;
     opacity: 0.6;
-
 }
+
+.feature a {
+    text-decoration:none;
+    color:#666666;
+}
+
 /*====== blocks =======*/
 .general-graphic-block {
     background:#FFFFFF;
@@ -396,15 +391,6 @@ p {
     margin-bottom:60px;
 }
 
-.graphic-block img {
-    overflow:hidden;
-    opacity:1 ;
-}
-
-.graphic-block img:hover {
-    opacity: 1;
-}
-
 .graphic-block h3 {
     margin: 20px;
 }
@@ -419,8 +405,13 @@ p {
     line-height: 20px;
 }
 
-.text {
+.about-text {
     margin-bottom:30px;
+}
+
+.about-text h2 span {
+    display:inline;
+    font-size:16px;
 }
 
 .rules {
@@ -436,11 +427,28 @@ p {
 }
 
 .rules ul li {
-    background:url('/static/images/arrow_mini.png') no-repeat;
+    background:url('/static/images/disc.png') no-repeat;
     padding-left: 15px;
     display:block;
     text-align:justify;
     font-family:'Panton-Regular';
+    line-height:20px;
+}
+
+.file-formats {
+    font-size:18px;
+	font-family:"Panton-Bold";
+}
+
+.create-block h1 {
+    text-align:center;
+}
+
+.create-block h5 {
+    margin:20px;
+}
+.create-block p {
+    text-align:center;
 }
 
 .articles {
@@ -454,6 +462,12 @@ p {
 .articles a {
     cursor: pointer;
 }
+.articles img {
+    width:450px;
+    height:80px;
+    margin-left:50px;
+    margin-top:8px;
+} 
 
 .article-read {
     width: 90%;
@@ -468,16 +482,22 @@ p {
     margin-top: 50px;
     margin-right: 1px;
     clear:both;
+    background:#ffffff;
 }
 .service h2 {
     text-align:center;
 }
 
 .service ul li {
-    background: url('../images/next1.png') no-repeat;
     padding-left: 20px;
     display:block;
     font-family:'Panton-Regular';
+    background: url('../images/disc.png') no-repeat;
+}
+
+.service ul li span {
+    display:inline;
+    font-weight:bold;
 }
 
 .service img {
@@ -486,16 +506,11 @@ p {
     opacity: 0.5;
 }
 
-
 .comments {
     clear:both;
     float:left;
     width:100%;
     margin-top:10px;
-}
-.create-block {
-    margin-top:20px;
-    clear:both;
 }
 
 .get-article {
@@ -503,11 +518,22 @@ p {
     margin-left:50px;
     margin-top:20px;
 }
+
+.get-article p span {
+    font-family:'Panton-Bold';
+    font-size:15px;
+}
 .article-range {
     margin-right:50px;
     margin-top:30px;
     float:right;
 }
+
+.article-range p span {
+    font-size:30px;
+    font-family:'Panton-Bold';
+}
+
 .additional_img {
    display:inline-block;
    margin-top:50px;
@@ -534,11 +560,13 @@ p {
 /*.comment_navigation {*/
     color:#1E90FF;
     float:right;
+    display:none;
 }
 
 .user [name=previous_button]{
     color:#1E90FF;
     float:left;
+    display:none;
 }
 
 .user [name]:hover {
@@ -551,8 +579,8 @@ p {
 .admin {
     float:right;
     display:inline-block;
-    margin-right:50px;
-    width:400px;
+    margin-right:45px;
+    width:360px;
 }
 .admin h4 {
     margin-bottom:20px;
@@ -573,9 +601,57 @@ p {
     text-size:16px;
 }
 
+.decision {
+    margin:50px;
+}
+
+.contact_page {
+    position:relative;
+    background:white;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5); /* Параметры тени */
+}
+.contacts {
+    background: url('/static/images/bg4.png') repeat;
+    height:94%;
+    top:0;
+    right:0;
+    position:absolute;
+    width:25%;
+    margin:20px;
+}
+
+.contacts dl {
+    margin:20px;
+}
+.contacts dt {
+	text-transform: uppercase;
+    font-family: "Panton-ExtraBold";
+    /*font-family: "brandon-grotesque", Helvetica, Arial, sans-serif;*/
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-size: 12px;
+    color: #e8554e;
+}
+.contacts dd {
+	color: #204a65;
+	margin-bottom: 25px;
+	margin-top:5px;
+}
+
+.contacts p {
+	line-height:20px;
+	margin:20px;
+	font-size:16px;
+}
+
+.culture-citizen {
+	font-family:'Panton-Bold';
+}
+
+
 /*==========footer==========*/
 .footer {
-    background: none repeat scroll 0 0 #333;
+    background: #333 url('/static/images/bg4.png') repeat;
     color: #EEEEEE;
     margin-top: 30px;
     height: 20px;
@@ -602,11 +678,61 @@ p {
 /*==========end footer==========*/
 
 
-
 /*============ ANIMATION ==========*/
 
+.lamp {
+    background:url("/static/images/lamp.png") no-repeat;
+    width:150px;
+    height:150px;
+    background-size: 150px 150px;
+    margin:auto; 
+}
 
-.make img:hover {
+.lamp:hover {
+    background:url("/static/images/lamp.gif") no-repeat;
+    background-size: 150px 150px;
+}
+
+.letter {
+    background:url("/static/images/letter.png") no-repeat;
+    width:100px;
+    height:100px;
+    background-size: 100px 100px;
+    margin:auto; 
+}
+
+.letter:hover {
+    background:url("/static/images/letter.gif") no-repeat;
+    background-size: 100px 100px;
+}
+
+.check {
+    background:url("/static/images/check.png") no-repeat;
+    width:100px;
+    height:100px;
+    background-size: 100px 100px;
+    margin:auto; 
+}
+
+.check:hover {
+    background:url("/static/images/check.gif") no-repeat;
+    background-size: 100px 100px;
+}
+
+.bilbord {
+    background:url("/static/images/bilbord.png") no-repeat;
+    width:150px;
+    height:150px;
+    background-size: 150px 150px;
+    margin:auto; 
+}
+
+.bilbord:hover {
+    background:url("/static/images/bilbord.gif") no-repeat;
+    background-size: 150px 150px;
+}
+
+.cogweel img:hover {
 -webkit-animation-name: rotation;
 -webkit-animation-duration: 10s;
 -webkit-animation-iteration-count: infinite;
@@ -699,5 +825,4 @@ transform:rotate(360deg);}
   -webkit-filter: brightness(100%);
   filter: brightness(100%);
 }
-
 
