correct styles, html pages, add logic to contact page

--- a/app/templates/50x.html
+++ b/app/templates/50x.html
@@ -39,7 +39,10 @@
         </ul>
       </div>
     </div>
-    <div class="error">Thres is internal server error. Please write us</div>    
+    <div class="error">
+    <h2>This page is in design</h2>
+    <p>There is internal server error. <br>Please write us on email <span>culture-city@gmail.com</span></p>
+    </div>    
     <div class="footer">
       <p class="footer-text">Copyright &copy; 2016, проект "Культурный город"</p>
       <div class="menu">
