--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -14,9 +14,9 @@
       <p>Электронный адрес:</p>
       <input type="text" name="email">
     </div>
-    <div class="comment">
+    <div class="opinion">
         <p>Комментарий:</p>
-        <textarea rows="10"></textarea>
+        <textarea rows="10" name="opinion"></textarea>
     </div>
     <input type="submit" class="btn red" value="Отправить"/>
     </form>
