--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,20 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<style>
-    .error {
-        margin:auto;
-        text-align:center;
-    }
-    .error h2 {
-        font-size:30px;
-    }
-    .error p {
-        text-transform:uppercase;
-    }
-</style>
-
 <div class="error">
-<p>this page is in design</p>
-<h2>{{error}}</h2>
+<h2>this page is in design</h2>
+<p>{{error}}<br>Please write us on email <span>culture-city@gmail.com</span></p>
 
 {% endblock %}
