--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -648,6 +648,38 @@ p {
 	font-family:'Panton-Bold';
 }
 
+.opinion {
+    margin-top:20px;
+    word-break:break-all;
+}
+.opinion textarea {
+    width:95%;
+    background-color:#e1e1db;
+}
+
+.radioButton {
+    display:inline-block;
+    text-align:center;
+    margin:5px;
+}
+
+.radioButton label {
+    display:block;
+    margin:0px;
+    margin-right:2px;
+    margin-bottom:5px;
+
+}
+.radioButtons input {
+    margin:0;
+    clear:both;
+    display:block;
+}
+
+
+/*=========FORMS==========*/
+
+
 
 /*==========footer==========*/
 .footer {
@@ -675,6 +707,21 @@ p {
     margin-top:0px;
 }
 
+.error {
+    margin:auto;
+    text-align:center;
+}
+.error h2 {
+    font-size:30px;
+    text-transform:uppercase;
+}
+.error p {
+    margin-bottom:30px;
+    font-size:20px;
+}
+.error span {
+    color:blue;
+}
 /*==========end footer==========*/
 
 
