--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,8 @@
       <div id="slideshow">
             <ul>
               <li class="image"><img src="/static/images/alphabet.jpg" alt=""></li>
-              <!--li class="image"><img src="/static/images/drive-Gagarin.jpg" alt=""></li> -->
-              <li class="image"><img src="/static/images/gagarin_on_street.jpg" alt=""></li>
+              <li class="image"><img src="/static/images/drive-Gagarin.jpg" alt=""></li>
+              <!--<li class="image"><img src="/static/images/gagarin_on_street.jpg" alt=""></li> -->
               <li class="image"><img src="/static/images/russian_flag.jpg" alt=""></li>
             </ul>
 -        <span class="arrow previous"></span>
