--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,7 +4,7 @@
 <div class="about">
   <div class="about-text">
     <h2>Проект "Культурный город" - <span>Проект, направленный на улучшение культурного уровня жизни, культурного окружения</span></h2>
-    <h2><span>Достигаться это будет путем размещения познавательных статей, написанных гражданами, на свободных рекламных стендах города</span></h2>
+    <h2><span>Достигается это путем размещения познавательных статей, написанных гражданами, на свободных рекламных стендах города</span></h2>
   </div>
   
    <div class="general-graphic-block">
