--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -5,8 +5,8 @@
   <div class="rules">
     <h1>Правила написания статьи</h1>
     <ul>
-        <li>Содержание стать не должно оскорблять чувства и достоинство другого человека</li>
-        <li>Содержание статьи должно представлять интелектуальную ценность</li>
+        <li>Содержание статьи не должно оскорблять чувства и достоинство другого человека</li>
+        <li>Содержание статьи должно представлять интеллектуальную ценность</li>
         <li>После отправки статьи автор предоставляет право на размещение материалов по усмотрению сотрудников проекта</li>
         <li>Графически оформленная статья является более приоритетной к размещению нежелии статья в текстовом формате</li>
         <li>Форматы принимаемых файлов - <span class="file-formats">indp, psd, txt, doc, docs, jpeg, jpg, pptx</span></li>
