--- a/app/templates/read.html
+++ b/app/templates/read.html
@@ -16,7 +16,7 @@
   <table>
     <tr>
       <th>Имя автора</th>
-      <th>Название Статьи</th>
+      <th>Название статьи</th>
       <th>Дата добавления</th>
       <th>Перейти</th>
       <th>Статус</td>
