--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
      <h4>&emsp;- город, который делают люди</h4>
      <p>Напишите свою статью, отправьте ее в "Культурный город" и ее прочитает Санкт-Петербург</p>
      <a href="create.html" class="btn red">Написать</a>
-     <p class="sidetext">Ознакомится с правилами написания статей можно в разделе <span>"Написать"</span></p>
+     <p class="sidetext">Ознакомиться с правилами написания статей можно в разделе <span>"Создать"</span></p>
    </div>
   </div>
   <div class="tagline">
@@ -35,7 +35,7 @@
       <div class="feature">
         <img src="/static/images/about.svg" alt="about"></img>
         <h3><a href="about.html">О проекте</a></h3>
-        <p>Как функционирует проект, основы его состоявляющей деятельности</p>
+        <p>Как функционирует проект, основы его составляющей деятельности</p>
       </div>
       <div class="feature">
         <img src="/static/images/read.svg" alt="read"></img>
