--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,11 +68,11 @@
       <p class="footer-text">Copyright &copy; 2016. Проект "Культурный город"</p>
       <div class="menu">
         <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">О проекте</a></li>
-          <li><a href="#">Создать</a></li>
-          <li><a href="#">Читать</a></li>
-          <li><a href="#">Контакты</a></li> 
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="about.html">О проекте</a></li>
+          <li><a href="create.html">Создать</a></li>
+          <li><a href="read.html">Читать</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
         </ul>
       </div>
     </div>
